--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
 }
 
 p {
-  color: rbg(85, 85, 85);
+  color: rgb(85, 85, 85);
 }
 
 /* TRANSITION */
@@ -178,11 +178,11 @@ section {
   font-weight: 600;
 }
 
-.section__text_p1 {
+.section__text__p1 {
   text-align: center;
 }
 
-.section__text_p2 {
+.section__text__p2 {
   font-size: 1.75rem;
   margin-bottom: 1rem;
 }
@@ -245,9 +245,68 @@ section {
 }
 
 .btn-color-2:hover {
-  border: rgb(255, 255 255) 0.1rem solid;
+  border: rgb(255, 255, 255) 0.1rem solid;
 }
 
 .btn-container {
   gap: 1rem;
+}
+
+/* ABOUT SECTION */
+
+#about {
+  position: relative;
+}
+
+.about-containers {
+  gap: 2rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+
+.about-details-container {
+  justify-content: center;
+  flex-direction: column;
+}
+
+.about-containers,
+.about-details-container {
+  display: flex;
+}
+
+.about-pic {
+  border-radius: 2rem;
+}
+
+.arrow {
+  position: absolute;
+  right: -5rem;
+  bottom: 2.5rem;
+}
+
+.details-container {
+  padding: 1.5rem;
+  flex: 1;
+  background: white;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center;
+}
+
+.section-container {
+  gap: 6rem;
+  height: 80%;
+}
+
+.section__pic-container {
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
+}
+
+/* EXPERIENCE */
+
+#experience {
+  position: relative;
 }
