--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: Poppins, sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 html {
@@ -18,9 +18,10 @@ p {
 }
 
 /* TRANSITION */
+
 a,
 .btn {
-  transition: all 0.3s ease;
+  transition: all 300ms ease;
 }
 
 /* DESKTOP NAV */
@@ -52,7 +53,7 @@ a:hover {
   color: grey;
   text-decoration: underline;
   text-underline-offset: 1rem;
-  text-decoration-color: rbg(181, 181, 181);
+  text-decoration-color: rgb(181, 181, 181);
 }
 
 .logo {
@@ -79,7 +80,7 @@ a:hover {
   flex-direction: column;
   justify-content: space-between;
   height: 24px;
-  width: 34px;
+  width: 30px;
   cursor: pointer;
 }
 
@@ -87,7 +88,7 @@ a:hover {
   width: 100%;
   height: 2px;
   background-color: black;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.3 ease-in-out;
 }
 
 .menu-links {
@@ -98,7 +99,7 @@ a:hover {
   width: fit-content;
   max-height: 0;
   overflow: hidden;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.3 ease-in-out;
 }
 
 .menu-links a {
@@ -108,7 +109,7 @@ a:hover {
   font-size: 1.5rem;
   color: black;
   text-decoration: none;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.3 ease-in-out;
 }
 
 .menu-links li {
@@ -122,9 +123,11 @@ a:hover {
 .hamburger-icon.open span:first-child {
   transform: rotate(45deg) translate(10px, 5px);
 }
+
 .hamburger-icon.open span:nth-child(2) {
   opacity: 0;
 }
+
 .hamburger-icon.open span:last-child {
   transform: rotate(-45deg) translate(10px, -5px);
 }
@@ -132,9 +135,11 @@ a:hover {
 .hamburger-icon span:first-child {
   transform: none;
 }
+
 .hamburger-icon span:first-child {
   opacity: 1;
 }
+
 .hamburger-icon span:first-child {
   transform: none;
 }
@@ -199,6 +204,8 @@ section {
   gap: 1rem;
 }
 
+/* ICONS */
+
 .icon {
   cursor: pointer;
   height: 2rem;
@@ -214,7 +221,7 @@ section {
 
 .btn {
   font-weight: 600;
-  transition: all 0.3s ease;
+  transition: all 300ms ease;
   padding: 1rem;
   width: 8rem;
   border-radius: 2rem;
@@ -222,7 +229,7 @@ section {
 
 .btn-color-1,
 .btn-color-2 {
-  border: rbg(53, 53, 53) 0.1rem solid;
+  border: rgb(53, 53, 53) 0.1rem solid;
 }
 
 .btn-color-1:hover,
@@ -295,7 +302,7 @@ section {
 }
 
 .section-container {
-  gap: 6rem;
+  gap: 4rem;
   height: 80%;
 }
 
@@ -305,7 +312,7 @@ section {
   margin: auto 0;
 }
 
-/* EXPERIENCE */
+/* EXPERIENCE SECTION */
 
 #experience {
   position: relative;
@@ -344,7 +351,7 @@ article .icon {
   cursor: default;
 }
 
-/* PROJECTS */
+/* PROJECTS SECTION */
 
 #projects {
   position: relative;
@@ -357,8 +364,8 @@ article .icon {
 
 .project-img {
   border-radius: 2rem;
-  width: 80%;
-  height: 80%;
+  width: 90%;
+  height: 90%;
 }
 
 .project-title {
@@ -410,6 +417,8 @@ article .icon {
 .email-icon {
   height: 2.5rem;
 }
+
+/* FOOTER SECTION */
 
 footer {
   height: 26vh;
